# androidnativeapi

./: build.gradle  local.properties
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/org/webrtc/examples/androidnativeapi/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CallClient_jni.h  androidcallclient.cc  onload.cc
app/src/main/java/org/webrtc/examples/androidnativeapi/: CallClient.java  MainActivity.java
app/src/test/java/org/webrtc/examples/androidnativeapi/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
